First Module Commit
Modified About.html adding pictures, page title and content.
Modified Contact.htmk adding a picture, contact info and footer.
Added routes for djangoproj/urls for abput and contact.
Modified djangoproj/settings adding STATICFILES_DIR, DIRS, ALLOWED_HOSTS,
CSRF_TRUSTED_ORIGINS.

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,25 @@
-requests
-Django
-Pillow
-gunicorn
-python-dotenv
+asgiref==3.10.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+cssbeautifier==1.15.4
+django==5.2.7
+djlint==1.36.4
+editorconfig==0.17.1
+gunicorn==23.0.0
+idna==3.11
+jsbeautifier==1.15.4
+json5==0.12.1
+packaging==25.0
+pathspec==0.12.1
+pillow==12.0.0
+python-dotenv==1.2.1
+pyyaml==6.0.3
+regex==2025.10.23
+requests==2.32.5
+ruff==0.14.2
+six==1.17.0
+sqlparse==0.5.3
+tqdm==4.67.1
+urllib3==2.5.0
